# speech

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  data.js  example.config.js  index.js  package-lock.json  package.json
data/: examples.txt  pronunciation.txt
frontend/: index.html  index.js  package-lock.json  package.json  style.css
frontend/components/: App.vue
public/: index.html  site.webmanifest  style.css
src/: api.rs  data.rs  main.rs  speech.rs  state.rs
